--- a/HW6/HW6-2/108820028_HW6-2/app/src/main/res/values/strings.xml
+++ b/HW6/HW6-2/108820028_HW6-2/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">Droid Cafe</string>
+    <string name="app_name">108820028_HW6-2</string>
     <string name="action_settings">Settings</string>
     <string name="intro_text">Droid Desserts</string>
     <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
