--- a/HW10/HW10-2/108820028_HW10-2/app/src/main/res/values/strings.xml
+++ b/HW10/HW10-2/108820028_HW10-2/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">108820028_HW10-2</string>
+
+    <string-array name="url_head">
+        <item>http://</item>
+        <item>https://</item>
+    </string-array>
 </resources>
